.archive/home-automation/spoolman/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: spoolman
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: spoolman
      app.kubernetes.io/instance: spoolman
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    # bambuddy filament inventory sync (same namespace)
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: bambuddy
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
